# Multi-Source-Candidate-Data-Transformer

./: .gitignore  PROMPTS.md  README.md  ass.js  design_1.docx  design_note.docx  pyproject.toml  recruiter_notes.txt  test.py  test_ananya.py  test_ats.py  test_canonical.py  test_matcher.py  test_missing.json  test_norm.py  test_phone_conflict.py  test_profiles.py  test_projector.py  test_projector_errors.py
eightfold/: __init__.py
eightfold/cli/: main.py
eightfold/extractors/: __init__.py  ats_json.py  recruiter_notes.py
eightfold/merge/: __init__.py  build_profile.py  confidence.py  matcher.py  resolver.py
eightfold/normalize/: __init__.py  country.py  date.py  phone.py  skills.py
eightfold/schema/: __init__.py  canonical.py  paths.py  projector.py  validator.py
eightfold/tests/: test_ats_extr.py  test_merge.py  test_normalise.py  test_notes_extr.py  test_projector.py
sample_inputs/: ats_export.json  config_minimal.json
tests/: __init__.py  test_ats_extractor.py
