[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eightfold"
version = "0.1.0"
description = "Canonical profile pipeline scaffold for a take-home assignment"
readme = "PROMPTS.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["eightfold*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
